terraform/main.tf
# main.tf

terraform {
  backend "s3" {
    bucket         = "my-bucket"
    key            = "terraform.tfstate"  # Change this if you want to use a different filename
    region         = "eu-central-1"  # Change to your desired region
    dynamodb_table = "terraform_locks"  # Use DynamoDB for state locking
  }
}

# provider.tf
provider "aws" {
  region = "eu-central-1"  # Change this to your desired region
}

# s3_bucket.tf

resource "aws_s3_bucket" "terraform_state_bucket" {
  bucket = "my-bucket"

  tags = {
    Name = "Terraform State Bucket"
  }
}

# VPC
resource "aws_vpc" "my_vpc" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "internal_subnet" {
  vpc_id     = aws_vpc.my_vpc.id
  cidr_block = "10.0.1.0/24"
}

resource "aws_subnet" "external_subnet" {
  vpc_id     = aws_vpc.my_vpc.id
  cidr_block = "10.0.2.0/24"
}

# EKS Cluster
module "eks" {
  source          = "terraform-aws-modules/eks/aws"
  cluster_name    = "my-cluster"
  cluster_version = "1.21"
  subnet_ids      = [aws_subnet.internal_subnet.id, aws_subnet.external_subnet.id]
  vpc_id          = aws_vpc.my_vpc.id
}

# Nginx Deployment
resource "kubectl_deployment" "nginx" {
  metadata {
    name   = "nginx"
    labels = {
      app = "nginx"
    }
  }

  spec {
    replicas = 3

    selector {
      match_labels = {
        app = "nginx"
      }
    }

    template {
      metadata {
        labels = {
          app = "nginx"
        }
      }

      spec {
        container {
          image = "nginx:latest"
          name  = "nginx"
          ports {
            container_port = 80
          }
        }
      }
    }
  }
}

# ALB
resource "aws_lb" "my_alb" {
  name               = "my-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.external_subnet.id]
}

resource "aws_lb_target_group" "nginx_target_group" {
  name     = "nginx-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.my_vpc.id
}

resource "aws_lb_listener" "http_listener" {
  load_balancer_arn = aws_lb.my_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx_target_group.arn
  }
}

# ALB Security Group
resource "aws_security_group" "alb_sg" {
  vpc_id = aws_vpc.my_vpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# dynamodb.tf

resource "aws_dynamodb_table" "terraform_locks" {
  name           = "terraform_locks"
  hash_key       = "LockID"
  read_capacity  = 5
  write_capacity = 5

  attribute {
    name = "LockID"
    type = "S"
  }
}
